GoNoGo/force-app/main/default/objects/Go_No_Go_Status__mdt/Go_No_Go_Status__mdt.object-meta.xml
<CustomObject>
    <description>This is deprecated. Please use Go/No-Go Status object.</description>
    <label>[Deprecated] Go/No-Go Status</label>
    <pluralLabel>Go/No-Go Status</pluralLabel>
</CustomObject>