GoNoGo/force-app/main/default/objects/Go_No_Go_Status__mdt/fields/Max_Range__c.field-meta.xml
<CustomField>
    <fullName>Max_Range__c</fullName>
    <label>Max Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>