GoNoGo/force-app/main/default/objects/Go_No_Go_Status__mdt/fields/Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Name__c</fullName>
    <label>Static Resource Name</label>
    <type>TextArea</type>
</CustomField>